--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum
             loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum
         </p>
-        <a href="#contato" class="botão">Contrate Agora</a>
+        <a href="#Contato" class="botão">Contrate Agora</a>
         
     </section>
     <section id="Serviços">
